Bug 320815 - collectionDialog in collectionrequester.cpp defines no icon
Summary: collectionDialog in collectionrequester.cpp defines no icon
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: libakonadi (other bugs)
Version First Reported In: 1.9.2
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL: https://projects.kde.org/projects/kde...
Keywords:
Depends on:
Blocks: extramile
  Show dependency treegraph
 
Reported: 2013-06-06 10:49 UTC by markuss
Modified: 2013-06-06 11:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description markuss 2013-06-06 10:49:47 UTC
collectionrequester.cpp Line 92-94:
No icon defined.

Reproducible: Always

Steps to Reproduce:
1. Go to the advanced settings of an IMAP resource 
2. Choose a different Trash folder

Actual Results:  
Placeholder icon in title bar

Expected Results:  
Best-case scenario: Display the application's icon that spawned the window with maybe the generic Akonadi icon as fallback.

If that's too complicated: generic Akonadi icon or another fitting icon.
Comment 1 Laurent Montel 2013-06-06 11:36:12 UTC
I put akonadi icon.
Regards
Comment 2 Laurent Montel 2013-06-06 11:37:04 UTC
Git commit 61eb93858a327166e437e4ea52454a98ca956688 by Montel Laurent.
Committed on 06/06/2013 at 13:36.
Pushed by mlaurent into branch 'master'.

Fix Bug 320815 - collectionDialog in collectionrequester.cpp defines no icon

FIXED-IN: 4.11

M  +1    -0    akonadi/collectionrequester.cpp

http://commits.kde.org/kdepimlibs/61eb93858a327166e437e4ea52454a98ca956688