Fix Bug 320815 - collectionDialog in collectionrequester.cpp defines no icon

FIXED-IN: 4.11
BUG: 320815